Correct overflow property in artista.css
Fix typo in overflow property for html element.

--- a/artista.css
+++ b/artista.css
@@ -1,4 +1,7 @@
 /* Body */
+html{
+  booverflow-x: scroll;
+}
 body{
     overflow-x: hidden;
     font-family: 'Work Sans';
